--- a/stylesheet/header.css
+++ b/stylesheet/header.css
@@ -1,19 +1,16 @@
-@import url(main.css);
 
 .header
 {
-    display: flex;
-    position:fixed;
+    display:flex;
     top:0;
     left:0;
     padding: 16px 0px;
     margin: 0px 24px 0px 24px;
-
 }
 
-.header .left-links > ul .acess
+.header > .void
 {
-    flex: 5;
+   width: 1100px;
 }
 
 .header > .logo > a > img
@@ -21,7 +18,6 @@
     width: 68px;
     height: 48.03;
 }
-
 
 .header > .left-links > ul
 {
@@ -44,7 +40,6 @@
     color: #0F2A5D;
 }
 
-
 .header > .right-links > ul
 {
     display: flex;
@@ -59,13 +54,9 @@
     padding: 0px 16px 0px 16px ;
 }
 
-
 .header > .right-links > ul > li > a
 {
     text-decoration: none;
     color: #0F2A5D;
     font-weight: bold;
 }
-
-
-
