--- a/stylesheet/header.css
+++ b/stylesheet/header.css
@@ -24,6 +24,7 @@
     display: flex;
     flex-direction: row;
     margin: 0px 19x 0px 0px;
+    padding: 0px 0px 0px 0px ;
     list-style-type: none;
     font-weight: bold;
 }
