--- a/stylesheet/main.css
+++ b/stylesheet/main.css
@@ -13,6 +13,8 @@ body
     margin: 0;
 }
 
+/*//////////////////////////HEADER////////////////////////////////////*/
+
 @media screen and (max-width: 800px)
 {
     .header
@@ -161,6 +163,9 @@ body
 
 }
 
+
+/*//////////////////////////HEADER - IMAGEM 1////////////////////////////////////*/
+
 @media screen and (max-width: 1000px)
 {
     main 
@@ -179,6 +184,18 @@ body
     }
 
 }
-    
+
+
+/*//////////////////////////CONTENT REPONSIUVE////////////////////////////////////*/
+
+@media screen and (max-width: 800px)
+{
+    .plus-planes > ul
+    {
+        width:auto;
+    }
+
+
+}
     
     
