--- a/stylesheet/footer.css
+++ b/stylesheet/footer.css
@@ -58,5 +58,23 @@
     margin: 15px 0px 0px 0px;
 }
 
+/* //////////////////FOOTER - INTEGRANTES//////////////////*/
 
+.footer-integrantes
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 300px;
+    background-color: white;
+    background-size: cover;
+}
+
+.footer-integrantes > p
+{
+    font-size: 2rem;
+    flex: 0.6;
+    text-align: center;
+    color: #0F2A5D;
+}
 
