--- a/stylesheet/footer.css
+++ b/stylesheet/footer.css
@@ -4,7 +4,6 @@
 {
     display: flex;
     background-color: #0F2A5D;
-    background-size: cover;
     padding: 20px;
 }
 
@@ -86,5 +85,23 @@
     flex: 0.6;
     text-align: center;
     color: #0F2A5D;
+}
+
+@media screen and (max-width: 700px)
+{
+    .main-footer
+    {
+        background-size: cover;
+    }
+
+}
+
+@media screen and (max-width: 500px)
+{
+    .main-footer
+    {
+        background-size: cover;
+    }
+
 }
 
