--- a/stylesheet/header.css
+++ b/stylesheet/header.css
@@ -329,3 +329,60 @@ body  > .header-mapa > .logo-salesforce > a > img
 }
 
 
+/*//////////////////media query/////////////////*/
+
+@media screen and (max-width: 931px)
+{
+
+    body > .header > .logo > a
+    {
+        flex-direction: column;
+    }
+
+
+}
+
+@media screen and (max-width: 700px)
+{
+    body > .header > .logo > a
+    {
+        flex-direction: column;
+        align-items: left;
+    }
+
+    .header
+    {
+        flex-direction: column;
+        height: auto;
+        justify-content: left;
+        width: 150px;
+    }
+
+    .header > .left-links
+    {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .header > .left-links > ul
+    {
+    flex-direction: column;
+    }
+
+    .header > .right-links
+    {
+        flex-direction: column;
+
+    }
+
+    .header > .right-links > ul
+    {
+        flex-direction: column;
+    }
+
+    .header > .right-links > ul > li
+    {
+        padding: 0px 0px 10px 0px;
+    }
+
+}
